Opened 15 years ago

Closed 10 years ago

#5621 closed bug (fixed)

[MediaPlayer] restarting media_addon_server doesn't work

Reported by: diver Owned by: Barrett
Priority: low Milestone: R1
Component: Kits/Media Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #6217
Platform: All

Description

Quit media_addon_server from ProcessController.
Launch some mp3 file.
MediaPlayer offers to start media server, but will fail to start media_addon_server.

Tested with hrev35937 in VirtualBox 3.0.12.

Change History (8)

comment:1 by axeld, 15 years ago

Component: Applications/MediaPlayerKits/Media Kit
Owner: changed from stippi to axeld
Priority: normallow

You're not supposed to mess with the add-on server. In any case, this isn't a MediaPlayer issue (it just calls launch_media_server()).

comment:2 by diver, 15 years ago

I'm not, it just happens due to #5339.

comment:3 by fano, 15 years ago

patch: 0

I've tried to restart media_addon in the right way using Preferences/Media "Restart Media Services" the operation seems to go well media_addon_server is running again, but Mediaplayer shows only a black screen.

So is possible that "Media Services" restart but not competely and Mediaplayer can't understood this. The only way to resolve this is reboot the system...

comment:4 by korli, 14 years ago

Blocking: 6217 added

comment:5 by Disreali, 13 years ago

Still occurs on hrev43877.

comment:7 by Barrett, 10 years ago

Owner: changed from axeld to Barrett
Status: newassigned

comment:8 by Barrett, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev49445.

Note: See TracTickets for help on using tickets.