launch_media_server: correctly handle media services start

* Handle when the media_addon_server is not
  running.
* Fix #5621.